--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,20 +24,20 @@ import login from '../assets/images/login.svg';
 <!-- Center: Navigation Links (Hidden on Mobile) -->
   <nav class="hidden md:flex items-center gap-8">
     <div class="relative group"> 
-  <a href="/abonnement" class="text-lg font-medium text-gray-800 hover:underline flex items-center gap-1">Vinabonnement 
+  <a href="/abonnement" class="text-s hover:underline flex items-center gap-1">Vinabonnement 
     <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
       <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
     </svg>
   </a>
   <div class="absolute hidden group-hover:block bg-creamywhite pt-2 w-40">
-    <a href="/rodwin" class="block px-4 py-2 text-gray-800 hover:underline hover:bg-gray-100">Rødvinskasse</a>
-    <a href="/abonnement/hvidvinskasse" class="block px-4 py-2 text-gray-800 hover:underline hover:bg-gray-100">Hvidvinskasse</a>
-    <a href="/abonnement/mixkasse" class="block px-4 py-2 text-gray-800 hover:underline hover:bg-gray-100">Mixkasse</a>
+    <a href="/rodwin" class="block px-4 py-2 hover:underline">Rødvinskasse</a>
+    <a href="/abonnement/hvidvinskasse" class="block px-4 py-2 hover:underline">Hvidvinskasse</a>
+    <a href="/abonnement/mixkasse" class="block px-4 py-2 hover:underline">Mixkasse</a>
   </div>
 </div>
 
-    <a href="/" class="text-lg font-medium text-gray-800 hover:underline">Vinshop</a>
-    <a href="/om" class="text-lg font-medium text-gray-800 hover:underline">Om os</a>
+    <a href="/" class="text-s hover:underline">Vinshop</a>
+    <a href="/om" class="text-s hover:underline">Om os</a>
   </nav>
   
 
@@ -53,7 +53,7 @@ import login from '../assets/images/login.svg';
   <!-- Hamburger Menu til Mobile -->
   <button
     id="menu-toggle"
-    class="md:hidden flex items-center justify-center w-8 h-8 borde"
+    class="md:hidden flex items-center justify-center w-8 h-8 border"
   >
     <!-- Burger Icon -->
     <svg
@@ -110,7 +110,7 @@ import login from '../assets/images/login.svg';
     <input
       type="text"
       placeholder="Søg efter sort, drue, årgang..."
-      class="flex-1 bg-transparent border-none text-gray-800 placeholder-gray-400 focus:outline-none"
+      class="flex-1 bg-transparent border-none pl focus:outline-none"
     />
   </div>
 </div>
@@ -121,9 +121,9 @@ import login from '../assets/images/login.svg';
   class="hidden md:hidden bg-creamywhite py-4 border-b border-brown"
 >
   <nav class="flex flex-col ml-8 gap-4">
-    <a href="/abonnement" class="text-lg font-medium text-gray-800 hover:underline">Vinabonnement</a>
-    <a href="/" class="text-lg font-medium text-gray-800 hover:underline">Vinshop</a>
-    <a href="/om" class="text-lg font-medium text-gray-800 hover:underline">Om os</a>
+    <a href="/abonnement" class="text-mmb hover:underline">Vinabonnement</a>
+    <a href="/" class="text-mmb hover:underline">Vinshop</a>
+    <a href="/om" class="text-mmb hover:underline">Om os</a>
     <Button class="mt-4">Bliv abonnent</Button>
   </nav>
 </div>
