--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -27,8 +27,8 @@ import explorewinesfooter from "../assets/images/explorewinesfooter.svg";
 
       <!-- Column 2: Contact -->
       <div class="space-y-4">
-        <h3 class="text-lg font-bold text-gray-800">Kontakt</h3>
-        <ul class="space-y-2 text-gray-600">
+        <h3 class="text-lg">Kontakt</h3>
+        <ul class="space-y-2 ">
           <li>Tlf. 4118 3959</li>
           <li>Email: <a href="mailto:info@explorewines.dk" class="hover:underline">info@explorewines.dk</a></li>
           <li>CVR: 29396930</li>
