--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -28,7 +28,7 @@ import Abonnementcard from "../components/Abonnementcard.astro";
     <!-- 1 Card -->
     <div class="card group" data-card="1">
       <Abonnementcard
-        cardimage="abonnement1.png"
+        cardimage="roedvin.webp"
         cardimagealt="flasker"
         navn="Rødvinskasse"
       ></Abonnementcard>
@@ -37,7 +37,7 @@ import Abonnementcard from "../components/Abonnementcard.astro";
     <!-- 2 Card -->
     <div class="card group" data-card="2">
       <Abonnementcard
-        cardimage="abonnement2.png"
+        cardimage="hvidvin.webp"
         cardimagealt="Vinflaske"
         navn="Hvidvinskasse"
 
@@ -47,7 +47,7 @@ import Abonnementcard from "../components/Abonnementcard.astro";
     <!-- 3 Card -->
     <div class="card group" data-card="3">
       <Abonnementcard
-        cardimage="abonnement3.png"
+        cardimage="mixed.webp"
         cardimagealt="Vinflaske"
         navn="Mixedkasse"
       ></Abonnementcard>
