--- a/src/pages/rodwin.astro
+++ b/src/pages/rodwin.astro
@@ -97,7 +97,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
     <!-- 1 Card -->
     <div class="card group" data-card="1">
       <Card
-        cardimage="vin-single.png"
+        cardimage="singleview.webp"
         cardimagealt="Vinflaske"
         navn="Jongieux Blanc, Vin De Savoie AOC,"
         land="Frankrig"
@@ -108,7 +108,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
     <!-- 2 Card -->
     <div class="card group" data-card="2">
       <Card
-        cardimage="vin-single.png"
+        cardimage="singleview.webp"
         cardimagealt="Vinflaske"
         navn="L A Cruz Vega Roble, Bogarve,"
         land="Spanien"
@@ -119,7 +119,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
     <!-- 3 Card -->
     <div class="card group" data-card="3">
       <Card
-        cardimage="vin-single.png"
+        cardimage="singleview.webp"
         cardimagealt="Vinflaske"
         navn="Escriba Reserva, DOC do Tejo,"
         land="Portugal"
@@ -130,7 +130,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
     <!-- 4 Card -->
     <div class="card group" data-card="4">
       <Card
-        cardimage="vin-single.png"
+        cardimage="singleview.webp"
         cardimagealt="Vinflaske"
         navn="Pinotage Organic Wine By Sophie,"
         land="Sydafrika"
