--- a/src/pages/om.astro
+++ b/src/pages/om.astro
@@ -6,6 +6,7 @@ import { Image } from 'astro:assets';
 import thumbsup from "../assets/images/thumbsup.png";
 import collage from "../assets/images/collage.png"
 import omostegning from "../assets/images/om-os-tegning.svg";
+import omos from "../assets/images/om.webp";
 
 ---
 <MainLayout title="Titel">
