--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,19 +1,105 @@
 ---
 import { Image } from 'astro:assets';
 import explorewinesfooter from "../assets/images/explorewinesfooter.svg";
+import fbicon from "../assets/images/fb.svg"
+import igicon from "../assets/images/ig.svg"
 
 ---
-<div>
-<footer class=" pt-8 border-t border-brown">
+                                                                    <!-- Mobile footer -->
+
+<footer class="md:hidden bg-creamywhite text-brown border-t border-brown">
+  <!-- Logo -->
+   <div class="p-8 border-b">
+          <img class="object-cover w-full h-full" src={explorewinesfooter.src} alt="">
+    </div>
+
+  <!-- Kontakt, Links og Sociale medier -->
+  <div class="grid grid-cols-2 gap-4 px-4 py-8 border-b border-brown">
+    <!-- Venstre Side: Kontakt og Information -->
+    <div class="space-y-6">
+      <div>
+        <h3 class="font-bold mb-2">Kontakt</h3>
+        <ul class="text-sm leading-relaxed space-y-1">
+          <li>Tel. 41 18 39 56</li>
+          <li>
+            Email:
+            <a href="mailto:info@explorewines.dk" class="hover:underline">info@explorewines.dk</a>
+          </li>
+          <li>CVR: 29396930</li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="font-bold mb-2">Information</h3>
+        <ul class="text-sm leading-relaxed space-y-1">
+          <li><a href="#" class="hover:underline">Handelsbetingelser</a></li>
+          <li><a href="#" class="hover:underline">Persondatapolitik</a></li>
+          <li><a href="#" class="hover:underline">Cookiepolitik</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Højre Side: Vinabonnement og Sociale Ikoner -->
+    <div class="space-y-6">
+      <div>
+        <ul class="text-sm leading-relaxed space-y-1">
+          <li><a href="#" class="hover:underline">Vinabonnement</a></li>
+          <li><a href="#" class="hover:underline">Vinshop</a></li>
+          <li><a href="#" class="hover:underline">Om os</a></li>
+        </ul>
+      </div>
+      <!-- Sociale Ikoner -->
+      <div class="flex space-x-4 mt-4">
+        <a href="#" class="text-l text-brown">
+          <img class="fab fa-facebook w-full h-full" src={igicon.src}>
+        </a>
+        <a href="#" class="text-l text-brown">
+          <img class="fab fa-instagram w-full h-full" src={fbicon.src}>
+        </a>
+      </div>
+    </div>
+  </div>
+
+ <!-- Højre side footer: Nyhedsbrev -->
+  <div class="border-l p-6">
+      <p class="tracking-wide text-m md:text-[4.5rem]">Nyhedsbrev</p  >
+      <p class="text-mmb md:text-m leading-tight mb-4 mt-2">Tilmeld dig vores nyhedsbrev og få 10% rabat på din første ordre</p>
+        <!--  Input fælt -->
+    <form class="flex md:flex-row items-center  overflow-hidden ">
+      <input 
+        type="email" 
+        placeholder="Skriv din e-mail her..." 
+        class="flex-grow px-4 py-3 bg-creamywhite"
+        required
+      />
+      <button 
+        type="submit" 
+        class="flex items-center justify-center px-6 py-3 border-r border-y border-brown text-lg font-medium hover:bg-red-700 hover:text-orange transition">
+        →
+      </button>
+    </form>
+      <p class="text-xsmb md:text-xs leading-relaxed mt-2">
+Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og inspiration fra ExploreWines via e-mail. Jeg kan til enhver tid afmelde mig via linket i bunden af nyhedsbrevet. Oplysningerne behandles i overensstemmelse med ExploreWines' privatlivspolitik.      </p>
+</div>
+</footer>
+
+
+
+
+                                                                <!-- Desktop footer -->
+
+
+
+
+<footer class=" hidden md:block pt-8 border-t border-brown">
   <div class="mx-auto">
     <!-- Large Logo -->
     <div class="px-8 pb-8 border-b">
           <img class="object-cover w-full h-full" src={explorewinesfooter.src} alt="">
     </div>
 
-   <div class="grid grid-cols-1 md:grid-cols-2 px-6 border-brown place-items-center">
+   <div class="grid grid-cols-2 px-6 pb-8 border-brown place-items-center">
     <!-- Venstre side: Kontakt og Information -->
-    <div class="md:grid md:grid-cols-2 lg:grid-cols-3 gap-8  ">
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8  ">
           <!-- Midt: Vinabonnement Links -->
     <div class="space-y-4 md:space-y-8">
       <ul class="space-y-1 text-base leading-relaxed">
@@ -24,10 +110,10 @@ import explorewinesfooter from "../assets/images/explorewinesfooter.svg";
       <!-- Sociale Ikoner -->
       <div class="flex space-x-4 mt-4">
         <a href="#" class="text-l text-brown">
-          <i class="fab fa-facebook"></i>
+          <img class="fab fa-facebook w-full h-full" src={igicon.src}>
         </a>
-        <a href="#" class="text-2xl hover:text-red-600">
-          <i class="fab fa-instagram"></i>
+        <a href="#" class="text-l text-brown">
+          <img class="fab fa-instagram w-full h-full" src={fbicon.src}>
         </a>
       </div>
     </div>
@@ -54,7 +140,7 @@ import explorewinesfooter from "../assets/images/explorewinesfooter.svg";
 
     <!-- Højre Side: Nyhedsbrev -->
  <!-- Højre side footer: Nyhedsbrev -->
-  <div class="border-l">
+  <div class="border-l pl-6">
       <p class="tracking-wide text-m md:text-[4.5rem]">Nyhedsbrev</p  >
       <p class="text-mmb md:text-m leading-tight mb-4 mt-2">Tilmeld dig vores nyhedsbrev og få 10% rabat på din første ordre</p>
         <!--  Input fælt -->
@@ -75,7 +161,14 @@ import explorewinesfooter from "../assets/images/explorewinesfooter.svg";
 Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og inspiration fra ExploreWines via e-mail. Jeg kan til enhver tid afmelde mig via linket i bunden af nyhedsbrevet. Oplysningerne behandles i overensstemmelse med ExploreWines' privatlivspolitik.      </p>
 </div>
   </div>
+</div>
 </footer>
+
+
+
+
+
+
 
 
 
