--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import gsap from 'gsap';
 import { useGSAP } from '@gsap/react';
 import bordvin from "../assets/images/bordvin.svg";
 import logo from "../assets/images/logo.svg";
-import collage from "../assets/images/collage.png"
+import collage from "../assets/images/collage.webp"
 import herovin from "../assets/images/hero-vin.png"
 import heroglas from "../assets/images/hero-glas.png"
 import Anmeldelser from "../components/Anmeldelser.astro";
@@ -16,11 +16,13 @@ import tegning1 from "../assets/images/tegning1.svg"
 import herotegning from "../assets/images/logo-u-baggrund-s-tynd.svg"
 import tegning2 from "../assets/images/tegning2.svg"
 import tegning3 from "../assets/images/tegning3.svg"
-import vin1 from "../assets/images/vin1.png"
-import vin2 from "../assets/images/vin2.png"
-import vin3 from "../assets/images/vin3.png"
-import vin4 from "../assets/images/vin4.png"
-import vin5 from "../assets/images/vin5.png"
+
+import vin1 from "../assets/images/vin1.webp"
+import vin2 from "../assets/images/vin2.webp"
+import vin3 from "../assets/images/vin3.webp"
+import vin4 from "../assets/images/vin4.webp"
+
+import vin5 from "../assets/images/vin5.webp"
 import hero1 from "../assets/images/endelig1.webp"
 import hero2 from "../assets/images/hero1.webp"
 
