--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -43,8 +43,9 @@ import login from '../assets/images/login.svg';
 
   <!-- Højre side: Call-to-Action & Icons -->
   <div class="hidden md:flex items-center gap-6">
-    <Button>Bliv abonnent</Button>
-    <div class="flex items-center gap-4">
+   <a href="/abonnement">
+            <Button>Bliv abonnent</Button>
+          </a>    <div class="flex items-center gap-4">
       <img src={login.src} alt="User Icon" class="w-6 h-6" />
       <img src={kurv.src} alt="Cart Icon" class="w-6 h-6" />
     </div>
