--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -8,7 +8,7 @@ import stepbystep from "../assets/images/stepbystep.svg"
 import stepbystepmobile from "../assets/images/stepbystepmobile.svg"
 import Anmeldelser from "../components/Anmeldelser.astro";
 import Card from "../components/Card.astro";
-import Abonnementcard from "../components/Abonnementcard.astro";
+import Abonnementcard from "../components/abonnementcard.astro";
 
 
 ---
@@ -96,8 +96,8 @@ Leveringsdag: Sidste torsdag i måneden </p>
     </p>
     </div>
   </div>
-          <img class="hidden md:block md:object-cover md:w-full md:h-full" src={stepbystep.src} alt="">
-                    <img class="block md:hidden md:object-cover md:w-full md:h-full" src={stepbystepmobile.src} alt="">
+          <img class="hidden md:block md:object-cover md:w-full md:h-full" src={stepbystep.src} alt="trin for trin af handel">
+                    <img class="block md:hidden md:object-cover md:w-full md:h-full" src={stepbystepmobile.src} alt="trin for trin af handel">
 
 
 
