--- a/src/pages/rodwin.astro
+++ b/src/pages/rodwin.astro
@@ -64,19 +64,19 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
             NO 1.
           </div>
           <div
-            class="text-[2rem] font-medium text-gray-800 nav-item"
+            class="text-[2rem] nav-item"
             data-target="2"
           >
             NO 2.
           </div>
           <div
-            class="text-[2rem] font-medium text-gray-800 nav-item"
+            class="text-[2rem] nav-item"
             data-target="3"
           >
             NO 3.
           </div>
           <div
-            class="text-[2rem] font-medium text-gray-800 nav-item"
+            class="text-[2rem] nav-item"
             data-target="4"
           >
             NO 4.
