--- a/src/pages/betal.astro
+++ b/src/pages/betal.astro
@@ -5,6 +5,10 @@ import Link from '../components/Link.astro';
 import { Image } from 'astro:assets';
 import thumbsup from "../assets/images/thumbsup.png";
 import betaltegning from "../assets/images/betaltegning.svg";
+import vin1 from "../assets/images/vin1.webp";
+import hvidvin from "../assets/images/hvidvin.webp";
+import roedvin from "../assets/images/roedvin.webp";
+import step1 from "../assets/images/1_3svg.svg";
 ---
 <MainLayout title="Step 1/3">
 	<!-- Købsflow Side -->
@@ -14,7 +18,7 @@ import betaltegning from "../assets/images/betaltegning.svg";
     <div class="hidden md:block md:col-span-2 items-center">
       <div class="relative h-full border-r border-black">
         <!-- Illustration -->
-        <img class="md:object-cover w-full h-auto" src={betaltegning.src} alt="kasse og vin" />
+        <img class="md:object-cover w-full h-auto" src={step1.src} alt="kasse og vin" />
       </div>
     </div>
 
@@ -32,7 +36,7 @@ import betaltegning from "../assets/images/betaltegning.svg";
         <div class="border-t border-b border-black">
           <!-- Første Produkt -->
           <div class="flex flex-wrap items-center py-4">
-            <img src="https://via.placeholder.com/80x120" alt="Rødvinskasse" class="w-20 h-28 object-cover mr-4" />
+            <img src={roedvin.src} alt="Rødvinskasse" class="w-20 h-28 object-cover mr-4" />
             <div class="flex-1">
               <p class="text-mmb md:text-m">Rødvinskasse (abonnement)</p>
             </div>
@@ -49,9 +53,9 @@ import betaltegning from "../assets/images/betaltegning.svg";
 
           <!-- Andet Produkt -->
           <div class="flex flex-wrap items-center py-4">
-            <img src="https://via.placeholder.com/80x120" alt="Rødvinskasse" class="w-20 h-28 object-cover mr-4" />
+            <img src={hvidvin.src} alt="Hvidvinskasse" class="w-20 h-28 object-cover mr-4" />
             <div class="flex-1">
-              <p class="text-mmb md:text-m">Rødvinskasse (abonnement)</p>
+              <p class="text-mmb md:text-m">Hvidvinskasse (abonnement)</p>
             </div>
             <div class="flex items-center space-x-2">
               <button class="text-xl">-</button>
@@ -66,7 +70,7 @@ import betaltegning from "../assets/images/betaltegning.svg";
 
           <!-- Tredje Produkt -->
           <div class="flex flex-wrap items-center py-4">
-            <img src="https://via.placeholder.com/80x120" alt="Chardonnay" class="w-20 h-28 object-cover mr-4" />
+            <img src={vin1.src} alt="Chardonnay" class="w-20 h-28 object-cover mr-4" />
             <div class="flex-1">
               <p class="text-mmb md:text-m">2023 Chardonnay, Terre Siciliane IGP</p>
             </div>
