--- a/src/pages/betal3.astro
+++ b/src/pages/betal3.astro
@@ -5,6 +5,7 @@ import Link from '../components/Link.astro';
 import { Image } from 'astro:assets';
 import thumbsup from "../assets/images/thumbsup.png";
 import betaltegning from "../assets/images/betaltegning.svg";
+import step3 from "../assets/images/3_3.svg";
 ---
 <MainLayout title="Step 3/3">
 
@@ -15,7 +16,7 @@ import betaltegning from "../assets/images/betaltegning.svg";
     <div class="hidden md:block md:col-span-2 items-center">
       <div class="relative h-full border-r border-black">
         <!-- Illustration -->
-        <img class="md:object-cover w-full h-auto" src={betaltegning.src} alt="kasse og vin" />
+        <img class="md:object-cover w-full h-auto" src={step3.src} alt="Vinflakse, og vinglas" />
       </div>
     </div>
 
