--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,19 +9,15 @@ import { useGSAP } from '@gsap/react';
 import bordvin from "../assets/images/bordvin.svg";
 import logo from "../assets/images/logo.svg";
 import collage from "../assets/images/collage.webp"
-import herovin from "../assets/images/hero-vin.png"
-import heroglas from "../assets/images/hero-glas.png"
 import Anmeldelser from "../components/Anmeldelser.astro";
 import tegning1 from "../assets/images/tegning1.svg"
 import herotegning from "../assets/images/logo-u-baggrund-s-tynd.svg"
 import tegning2 from "../assets/images/tegning2.svg"
 import tegning3 from "../assets/images/tegning3.svg"
-
 import vin1 from "../assets/images/vin1.webp"
 import vin2 from "../assets/images/vin2.webp"
 import vin3 from "../assets/images/vin3.webp"
 import vin4 from "../assets/images/vin4.webp"
-
 import vin5 from "../assets/images/vin5.webp"
 import hero1 from "../assets/images/endelig1.webp"
 import hero2 from "../assets/images/hero1.webp"
@@ -161,16 +157,16 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
   <div class="mx-auto grid grid-cols-1 md:grid-cols-5 items-center gap-8">
     <!-- Venstre Content -->
     <div class="md:col-span-2">
-      <p class="tracking-wide text-m md:text-l">
+      <p class="text-m md:text-l">
         Vin på abonnement
       </p>
-      <h2 class="uppercase leading-tight mb-4 mt-2">
+      <h2 class="uppercase mb-4 mt-2">
         Oplev vores vinklub
       </h2>
-      <p class="text-mmb md:text-m  leading-relaxed">
+      <p class="text-mmb md:text-m  ">
         Når du bliver abonnent hos os, bliver du samtidig en del af vores vinklub.
       </p>
-      <p class="text-mmb md:text-m my-2 leading-relaxed">
+      <p class="text-mmb md:text-m my-2 ">
         Vi mødes én gang hver måned og smager på næste måneds vin, så du får mulighed for at tilpasse din næste vinkasse til dine ønsker og behov. Derudover udveksler vi erfaringer og viden om vin og har nogle hyggelige stunder sammen.
       </p>
 <Button>Bliv abonnent</Button>
@@ -210,7 +206,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
         →
       </button>
     </form>
-      <p class="text-smb md:text-s leading-relaxed mt-2">
+      <p class="text-smb md:text-s  mt-2">
 Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og inspiration fra ExploreWines via e-mail. Jeg kan til enhver tid afmelde mig via linket i bunden af nyhedsbrevet. Oplysningerne behandles i overensstemmelse med ExploreWines' privatlivspolitik.      </p>
     </div>
 
