--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,30 +36,39 @@ import hero2 from "../assets/images/hero1.webp"
 
   															<!-- Abonnenter section -->
 
-<section class=" text-brown md:mb-10">
+<section class=" text-brown mb-12 md:mb-32">
   <!-- Heading -->
-  <div class="mx-auto">
+  <div class="mx-auto px-4 md:px-6">
     <h3 class="pb-8">
 Med vores vinabonnement får du mulighed for at smage forskellige vine hver måned. Vi udvælger og sammensætter tre forskellige vinkasser, som du kan vælge imellem.    </h3>
   </div>
 
   <!-- Abonnenter -->
-  <div class="mx-auto grid grid-cols-1 md:grid-cols-3 gap-4">
+  <div class="mx-auto grid grid-cols-1 md:grid-cols-3 gap-16">
     <div class="">
-	<img class="md:object-cover md:w-full md:h-full" src={tegning1.src} alt="">
-      <p class="text-mmb md:text-l mb-1">Rødvinskasse</p>
+	<img class="md:object-cover md:w-full md:h-full" src={tegning1.src} alt="rødvinskasse">
+  <div class="pl-4 md:pl-6"> 
+      <p class="text-mmb md:text-l mb-1 ">Rødvinskasse</p>
             <a class="" href="/rodwin"><Button>Køb nu</Button></a>
-    </div>
-    <div class="">
-			<img class="md:object-cover md:w-full md:h-full" src={tegning2.src} alt="">
-      <p class="text-mmb md:text-l mb-1">Hvidvinskasse</p>
-                  <a href="/rodwin"><Button>Køb nu</Button></a>
+  </div>
 
     </div>
-    <div class="">
-			<img class="md:object-cover md:w-full md:h-full" src={tegning3.src} alt="">
-      <p class="text-mmb md:text-l mb-1">Mixed kasse</p>
+    <div class="md:">
+			<img class="md:object-cover md:w-full md:h-full" src={tegning2.src} alt="hvidvinskasse">
+      <div class="pl-4 md:pl-0">
+  <p class="text-mmb md:text-l mb-1">Hvidvinskasse</p>
                   <a href="/rodwin"><Button>Køb nu</Button></a>
+      </div>
+
+    </div>
+
+    <div class="">
+			<img class="md:object-cover md:w-full md:h-full" src={tegning3.src} alt="mixedkasse">
+      <div class="pl-4 md:pl-0">
+                  <p class="text-mmb md:text-l mb-1">Mixed kasse</p>
+                  <a href="/rodwin"><Button>Køb nu</Button></a>
+      </div>
+    
 
     </div>
   </div>
