--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,7 +90,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
     </div>
 
     <!-- Produkt Grid -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6">
+    <div class="grid grid-cols-3 lg:grid-cols-5 gap-6">
       <!-- Produkt 1 -->
       <div class="text-center">
         <img
@@ -131,7 +131,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
       </div>
 
       <!-- Produkt 4 -->
-      <div class="text-center">
+      <div class="hidden md:block text-center">
         <img
           src={vin4.src}
           alt="Vin d'Orange"
@@ -144,7 +144,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
       </div>
 
       <!-- Produkt 5 -->
-      <div class="text-center">
+      <div class="hidden md:block text-center">
         <img
           src={vin5.src}
           alt="Zolla Salice Salentino"
