--- a/src/pages/rodwin.astro
+++ b/src/pages/rodwin.astro
@@ -142,16 +142,16 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
 
                                                                <!-- Vin beskrivelse tilhører ovenstående -->
   <!-- Dynamisk section  -->
-  <section id="dynamicContent" class="bg-red-700 text-white py-16 px-8 hidden md:block">
+  <section id="dynamicContent" class="bg-brown text-creamywhite py-16 px-8 hidden md:block">
     <div class="mx-auto grid grid-cols-1 md:grid-cols-5 gap-8">
       <!-- Venstre Content -->
       <div class="md:col-span-2">
-        <h3 id="contentTitle" class="text-3xl md:text-4xl leading-tight">
+        <h3 id="contentTitle" class="text-creamywhite">
           LA Cruz Vega Roble, DO <br />
-          La Mancha, Spanien <span class="text-xl font-normal">2018</span>
+          La Mancha, Spanien <span class="">2018</span>
         </h3>
         <div class="mt-4">
-          <Button>Køb nu</Button>
+          <Button class="border-creamywhite">Køb nu</Button>
         </div>
       </div>
 
