--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
 	<img class="md:object-cover md:w-full md:h-full" src={tegning1.src} alt="rødvinskasse">
   <div class="pl-4 md:pl-6"> 
       <p class="text-mmb md:text-l mb-1 ">Rødvinskasse</p>
-            <a class="" href="/rodwin"><Button>Køb nu</Button></a>
+            <a class="" href="/rodwin"><Button variant="primary">Køb nu</Button></a>
   </div>
 
     </div>
@@ -53,7 +53,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
 			<img class="md:object-cover md:w-full md:h-full" src={tegning2.src} alt="hvidvinskasse">
       <div class="pl-4 md:pl-0">
   <p class="text-mmb md:text-l mb-1">Hvidvinskasse</p>
-                  <a href="/rodwin"><Button>Køb nu</Button></a>
+                  <a href="/rodwin"><Button variant="primary">Køb nu</Button></a>
       </div>
 
     </div>
@@ -62,7 +62,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
 			<img class="md:object-cover md:w-full md:h-full" src={tegning3.src} alt="mixedkasse">
       <div class="pl-4 md:pl-0">
                   <p class="text-mmb md:text-l mb-1">Mixed kasse</p>
-                  <a href="/rodwin"><Button>Køb nu</Button></a>
+                  <a href="/rodwin"><Button variant="primary">Køb nu</Button></a>
       </div>
     
 
@@ -79,8 +79,8 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
     <div class="flex justify-between items-center md:mb-8">
       <!-- Piletaster -->
       <div class="flex gap-4">
-  <Button variant="secondary"></Button>
-  <Button></Button>
+  <Button variant="back"></Button>
+  <Button variant="primary"></Button>
       </div>
       <!-- Titel -->
       <h3 class="">Vinflasker</h3>
