--- a/src/pages/rodwin.astro
+++ b/src/pages/rodwin.astro
@@ -50,7 +50,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
 </section>
 
 																		  <!-- Vin display -->
-<section>
+<section class="py-0">
   <div class="pt-4 hidden md:block">
     <div class="mx-auto">
       <!-- Navigation -->
@@ -93,16 +93,18 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
   </div>
 
   <!-- CARDS -->
-  <section class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-4 gap-4 mt-4">
+  <section class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-4 gap-4">
     <!-- 1 Card -->
     <div class="card group" data-card="1">
       <Card
         cardimage="singleview.webp"
         cardimagealt="Vinflaske"
-        navn="Jongieux Blanc, Vin De Savoie AOC,"
+        navn="Jongieux Blanc, Vin De,"
         land="Frankrig"
         aarstal="2023"
-      ></Card>
+        description="En elegant hvidvin fra Savoie-regionen i Frankrig, fremstillet på lokale druer. Årgang 2023 byder på en frisk og frugtrig smagsprofil med noter af citrus, grønne æbler og en let mineralsk afslutning. Perfekt som ledsager til fisk, skaldyr og lyse forretter.",
+      nr="NO.1"
+        ></Card>
     </div>
 
     <!-- 2 Card -->
@@ -113,6 +115,8 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
         navn="L A Cruz Vega Roble, Bogarve,"
         land="Spanien"
         aarstal="2018"
+                description="En elegant hvidvin fra Savoie-regionen i Frankrig, fremstillet på lokale druer. Årgang 2023 byder på en frisk og frugtrig smagsprofil med noter af citrus, grønne æbler og en let mineralsk afslutning. Perfekt som ledsager til fisk, skaldyr og lyse forretter.",
+      nr="NO.2"
       ></Card>
     </div>
 
@@ -124,6 +128,8 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
         navn="Escriba Reserva, DOC do Tejo,"
         land="Portugal"
         aarstal="2022"
+                description="En elegant hvidvin fra Savoie-regionen i Frankrig, fremstillet på lokale druer. Årgang 2023 byder på en frisk og frugtrig smagsprofil med noter af citrus, grønne æbler og en let mineralsk afslutning. Perfekt som ledsager til fisk, skaldyr og lyse forretter.",
+      nr="NO.3"
       ></Card>
     </div>
 
@@ -135,6 +141,8 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
         navn="Pinotage Organic Wine By Sophie,"
         land="Sydafrika"
         aarstal="2022"
+                description="En elegant hvidvin fra Savoie-regionen i Frankrig, fremstillet på lokale druer. Årgang 2023 byder på en frisk og frugtrig smagsprofil med noter af citrus, grønne æbler og en let mineralsk afslutning. Perfekt som ledsager til fisk, skaldyr og lyse forretter.",
+      nr="NO.4"
       ></Card>
     </div>
   </section>
